stop match table data wrapping in TDs

--- a/css/selectionViewBB.css
+++ b/css/selectionViewBB.css
@@ -40,6 +40,7 @@
 }
 
 .selectView TBODY TR {
+    white-space: nowrap;
     line-height: 1.8em;
     height: 1.8em;
 }
